src/test/ui/type/type-path-err-node-types.stderr
error[E0433]: failed to resolve: use of undeclared type or module `NonExistent`
  --> $DIR/type-path-err-node-types.rs:15:5
   |
LL |     NonExistent::Assoc::<u8>;
   |     ^^^^^^^^^^^ use of undeclared type or module `NonExistent`

error[E0412]: cannot find type `Nonexistent` in this scope
  --> $DIR/type-path-err-node-types.rs:7:12
   |
LL |     let _: Nonexistent<u8, Assoc = u16>;
   |            ^^^^^^^^^^^ not found in this scope

error[E0576]: cannot find method or associated constant `nonexistent` in trait `Tr`
  --> $DIR/type-path-err-node-types.rs:11:21
   |
LL |     <u8 as Tr<u8>>::nonexistent();
   |                     ^^^^^^^^^^^ not found in `Tr`

error[E0425]: cannot find value `nonexistent` in this scope
  --> $DIR/type-path-err-node-types.rs:19:5
   |
LL |     nonexistent.nonexistent::<u8>();
   |     ^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0425, E0433.
For more information about an error, try `rustc --explain E0412`.
